--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
-spring.application.name=EcommerceSpring
+spring.application.name= EcommerceSpring
+spring.datasource.url = jdbc:mysql://localhost:3306/ecommerce_db
+spring.datasource.username = root
+spring.datasource.password = ${PASSCODE}
+
+#This tell spring-boot which JDBC driver class to use.
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 server.port = ${PORT}
+
+#This tell to hibernate to print and generate all SQL Queries to the console. Useful for debugging and learning
+spring.jpa.show-sql = true
+
+#Specifies the SQL dialect hibernate should use.
+#Ensure that hibernate generate Optimized SQL queries. Without this,
+#Without this, spring boot guess based on the jdbc url
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+#Control how hibernate handle schema generation:
+#none -> no changes to DB schema
+#create -> drops and recreate the schema in every run
+#crate-drop -> Drop schema at app stops
+#update -> update DB schema (add new cols/tables, won't delete anything)
+spring.jpa.hibernate.ddl-auto = update
 base.url = ${URL}
