--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #create -> drops and recreate the schema in every run
 #crate-drop -> Drop schema at app stops
 #update -> update DB schema (add new cols/tables, won't delete anything)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
 base.url = ${URL}
+spring.flyway.enabled = true
+spring.flyway.locations = classpath:db/migration
+
