--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ spring.jpa.hibernate.ddl-auto = validate
 base.url = ${URL}
 spring.flyway.enabled = true
 spring.flyway.locations = classpath:db/migration
+eureka.client.service-url.defaultZone = ${EUREKA}
 
