--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 	implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 	implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.14'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.3.0'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
